--- a/example.env
+++ b/example.env
@@ -5,3 +5,5 @@ DISCORD_CLIENT_ID=<bot-client-id>
 DEVELOPER_USER_IDS=<your>,<discord>,<ids>
 
 MONGODB_URI=mongodb+srv://myDatabaseUser:D1fficultP%40ssw0rd@cluster0.example.mongodb.net/?retryWrites=true&w=majority
+
+BDL_API_KEY=<your ball dont lie api key>
