--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
+    "date-fns": "^3.4.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "glob": "^10.3.10",
+    "ioredis": "^5.3.2",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
+    "node-fetch": "^3.3.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
