--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "tempyjr",
+  "name": "kaizen",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "clean": "rm -r build",
     "build": "tsc --build",
-    "start": "npm run clean && npm run build && node build/index.js",
-    "startNoClean": "npm run build && node build/index.js"
+    "docker:down": "docker-compose down",
+    "docker:up": "docker-compose up --build",
+    "start": "npm run docker:down && npm run docker:up",
+    "startNoClean": "npm run build && node build/index.js",
+    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec 'ts-node' src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,10 +24,12 @@
     "ioredis": "^5.3.2",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
+    "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/node-cron": "^3.0.11",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
   }
